Closed
Bug 1355045
Opened 8 years ago
Closed 8 years ago
Transform bounds before making relative to parent in WebRenderLayer::GetWrRelBounds
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: jnicol, Assigned: jnicol)
References
Details
(Keywords: correctness)
Attachments
(1 file)
STR: enable layers.advanced.solid-color. The reftest layout/reftests/bugs/409659-1d.html will fail.
We need to translate the layer's visible bounds before making it relative to the parent layer's bounds.
Try before fix: https://treeherder.mozilla.org/#/jobs?repo=try&revision=7c72d1d2d0165abee78522f7d34a1a57ca95168c
Try after fix: https://treeherder.mozilla.org/#/jobs?repo=try&revision=ad8a6b62421f64c442e86526b2c82ab0a4030457
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8856476 [details]
Bug 1355045 - Transform bounds before making relative to parent in GetWrRelBounds.
https://reviewboard.mozilla.org/r/128428/#review131276
Attachment #8856476 -
Flags: review?(ethlin) → review+
| Assignee | ||
Comment 3•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=67f0cca69e9eefc8e6f7816153db77f11a4684e8
Ethan or Kats, could you please check this in for me? Thanks.
Flags: needinfo?(ethlin)
Flags: needinfo?(bugmail)
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/e7adf48d85be
Transform bounds before making relative to parent in GetWrRelBounds. r=ethlin
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Flags: needinfo?(ethlin)
Flags: needinfo?(bugmail)
Comment 5•8 years ago
|
||
| bugherder | ||
Updated•8 years ago
|
status-firefox55:
--- → fixed
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•